cmake_minimum_required(VERSION 3.10)

project(WebRTSP)

option(BUILD_TEST_APPS "Build test applications" OFF)
option(BUILD_BASIC_SERVER "Build basic server application" OFF)
option(HTTP_SUPPORT "HTTP server support" ON)
option(WS_SERVER_SUPPORT "libwebsockets based server implementation" ON)
option(WS_CLIENT_SUPPORT "libwebsockets based client implementation" ON)
option(QML_SUPPORT "QML support" OFF)
option(QT_SERVER_SUPPORT "Qt QWebSocketServer based server implementation" OFF)

if(NOT WS_SERVER_SUPPORT AND NOT WS_CLIENT_SUPPORT)
    set(LIBWEBSOCKETS_SUPPORT OFF CACHE BOOL "Disable all references to libwebsockets" FORCE)
endif()

if(DEFINED ENV{SNAPCRAFT_BUILD_ENVIRONMENT})
    add_definitions(-DSNAPCRAFT_BUILD=1)
    set(SNAPCRAFT_BUILD YES)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

add_subdirectory(Helpers)
add_subdirectory(RtspParser)
add_subdirectory(RtspSession)
add_subdirectory(RtStreaming)
if(WS_SERVER_SUPPORT)
    add_subdirectory(Signalling)
endif()
if(WS_CLIENT_SUPPORT)
    add_subdirectory(Client)
endif()
if(HTTP_SUPPORT)
    add_subdirectory(Http)
endif()
if(QML_SUPPORT)
    add_subdirectory(Qt/QML)
endif()
if(QT_SERVER_SUPPORT)
    add_subdirectory(Qt/Server)
endif()

if(BUILD_TEST_APPS)
    add_subdirectory(Apps/Test)
    add_subdirectory(Apps/RecordTest)
endif()

if(BUILD_BASIC_SERVER)
    add_subdirectory(Apps/BasicServer)
endif()

#get_cmake_property(_variableNames VARIABLES)
#foreach (_variableName ${_variableNames})
#    message(STATUS "${_variableName}=${${_variableName}}")
#endforeach()
